--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 	this is Git.
+
+	login from
+	
 	git init 初始化
 	git config --global user.name' '
 	git config --global user.eaml''
@@ -14,6 +17,12 @@
 	git add . 添加所有文件
 	git status 查看当前
 	git rm --cacher 删除
-	cd.> .gitignore 添加忽略文件
+	git commit -m “balabala"  提交至远程仓库 及修改备注
+	d: 盘符转换
+	cd 地址  转换文件夹
+	cd.>  创建新文件
+	cd.> .gitignore 添加忽略文件/文件夹  把不想上传的文件名写进.gitignore
+	git branch balabala  创建分支
+	git checkout login  转换分支
 </body>
 </html>
