--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 	cd.>  创建新文件
 	cd.> .gitignore 添加忽略文件/文件夹  把不想上传的文件名写进.gitignore
 	git branch balabala  创建分支
-	git checkout login  转换分支
+	git checkout balabala  转换分支
+	git checkout master 回到主线
+	git merge balabala 在主线下 把分支合并
 </body>
 </html>
